--- a/build.xml
+++ b/build.xml
@@ -57,6 +57,11 @@
         <copy todir="${build.project.dir}">
             <fileset dir="${src.dir}" excludes="**/*.java"/>
         </copy>
+
+        <!-- Distribute socket with LICENSE only -->
+        <copy todir="${dist.dir}">
+            <fileset file="${basedir}/LICENSE.txt"/>
+        </copy>
     </target>
 
     <target name="build-jar" depends="compile-socket">
@@ -136,7 +141,7 @@
         <property name="build.type" value="-community"/>
     </target>
 
-    <target name="include-assets" depends="init,get-version" >
+    <target name="include-assets" depends="init,get-version" if="${dist.include_demo}">
         <echo>Copying resource files to output</echo>
 
         <copy todir="${dist.dir}/${demo.dir}/${asset.dir}">
@@ -164,12 +169,6 @@
         <copy todir="${dist.dir}/${demo.dir}">
             <fileset file="sample.html"/>
         </copy>
-
-        <!-- Distribute socket with LICENSE only -->
-        <copy todir="${dist.dir}">
-            <fileset file="${basedir}/LICENSE.txt"/>
-        </copy>
-
     </target>
 
     <!--
