--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
       jdk: oraclejdk11
       env: TARGET=pkgbuild
 language: java
+dist: trusty
 before_script:
     - sw_vers -productVersion && brew update && brew install ant; ant -version
     - test -e /etc/lsb-release && sudo apt-get update -qq && sudo apt-get install -y makeself nsis; echo;
