--- a/src/qz/installer/assets/linux-shortcut.desktop.in
+++ b/src/qz/installer/assets/linux-shortcut.desktop.in
@@ -1,9 +1,8 @@
 [Desktop Entry]
 Type=Application
 Name=%ABOUT_TITLE%
-Exec="%PROPS_FILE%%PARAM%"
+Exec="%DESTINATION%/%PROPS_FILE%"%PARAM%
 Path=%DESTINATION%
 Icon=%DESTINATION%/%LINUX_ICON%
 MimeType=application/x-qz;x-scheme-handler/qz;
 Terminal=false
-Comment=%ABOUT_TITLE%
